--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+tags: [turing, turing institute, data-centric-engineering, computer science, machine learning, artifical intelligencem, warwick, james, walsh, james walsh]
 ---
 
 <div class="container">
