--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-tags: [turing, turing institute, data-centric-engineering, computer science, machine learning, artifical intelligencem, warwick, james, walsh, james walsh]
+tags: [turing, turing institute, warwick, cambridge, engineering, university, data-centric-engineering, computer science, machine learning, ml, artifical intelligence, ai, james, walsh, james walsh]
 ---
 
 <div class="container">
